Added code for contrastive learning

--- a/Contrastive Learning.ipynb
+++ b/Contrastive Learning.ipynb
@@ -383,7 +383,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Siamese Networks"
+    "### Siamese Networks\n",
+    "\n",
+    "Now we'll train a siamese network that takes a pair of images as input and trains the model such that the embedding outputs of the model is minimum if input pair belong to same class or maximum if input pair belong to different classes. Loss function used in this case is Contrastive Loss Function. Hence, it is also called as **contrastive learning**.\n",
+    "\n",
+    "$$\n",
+    "L_{contrastive}(x_{0}, x_{1}, y) = \\frac{1}{2}\\|f(x_{0}) - f(x_{1}) \\|_{2}^{2} + \\frac{1}{2}(1-y)\\{max(0,m-\\|f(x_{0}) - f(x_{1})\\|_{2})\\}^{2}\n",
+    "$$\n",
+    "\n",
+    "$x_{0}, x_{1}$ are input pairs of image and $y$ is either 1 or 0 depicting whether the input pair has same label or different. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import SiameseMNIST\n",
+    "\n",
+    "siamese_train_dataset = SiameseMNIST(mnist_train_dataset)\n",
+    "siamese_test_dataset  = SiameseMNIST(mnist_test_dataset)\n",
+    "\n",
+    "batch_size = 128\n",
+    "kwargs     = {'num_workers': 1, 'pin_memory': True} if cuda else {}\n",
+    "\n",
+    "siamese_train_loader = torch.utils.data.DataLoader(siamese_train_dataset, batch_size=batch_size, shuffle=True, **kwargs)\n",
+    "siamese_test_loader  = torch.utils.data.DataLoader(siamese_test_dataset, batch_size=batch_size, shuffle=False, **kwargs)\n",
+    "\n",
+    "# Set up the network and training parameters\n",
+    "from networks import EmbeddingNet, SiameseNet\n",
+    "from losses import ContrastiveLoss\n",
+    "\n",
+    "margin = 1\n",
+    "embedding_net = EmbeddingNet()\n",
+    "model   = SiameseNet(embedding_net)\n",
+    "\n",
+    "if cuda:\n",
+    "    model.cuda()\n",
+    "    \n",
+    "loss_fn = ContrastiveLoss(margin)\n",
+    "lr      = 1e-3\n",
+    "optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+    "scheduler = lr_scheduler.StepLR(optimizer, 8, gamma = 0.1, last_epoch=-1)\n",
+    "n_epochs  = 20\n",
+    "log_interval = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: [0/60000 (0%)]\tLoss: 0.227695\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.070563\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.043756\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.033870\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.026752\n",
+      "Epoch: 1/20. Train set: Average loss: 0.0409\n",
+      "Epoch: 1/20. Validation set: Average loss: 0.0198\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.021088\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.019101\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.017574\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.015655\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.012937\n"
+     ]
+    }
+   ],
+   "source": [
+    "fit(siamese_train_loader, siamese_test_loader, model, loss_fn, optimizer, scheduler, n_epochs, cuda, log_interval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_embeddings_cl, train_labels_cl = extract_embeddings(train_loader, model)\n",
+    "plot_embeddings(train_embeddings_cl, train_labels_cl)\n",
+    "val_embeddings_cl, val_labels_cl = extract_embeddings(test_loader, model)\n",
+    "plot_embeddings(val_embeddings_cl, val_labels_cl)"
    ]
   }
  ],
