Contrastive Learning is done

--- a/Contrastive Learning.ipynb
+++ b/Contrastive Learning.ipynb
@@ -433,7 +433,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -450,7 +452,133 @@
       "Train: [12800/60000 (21%)]\tLoss: 0.019101\n",
       "Train: [25600/60000 (43%)]\tLoss: 0.017574\n",
       "Train: [38400/60000 (64%)]\tLoss: 0.015655\n",
-      "Train: [51200/60000 (85%)]\tLoss: 0.012937\n"
+      "Train: [51200/60000 (85%)]\tLoss: 0.012937\n",
+      "Epoch: 2/20. Train set: Average loss: 0.0158\n",
+      "Epoch: 2/20. Validation set: Average loss: 0.0114\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.007704\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.010490\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.010692\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.010052\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.009065\n",
+      "Epoch: 3/20. Train set: Average loss: 0.0099\n",
+      "Epoch: 3/20. Validation set: Average loss: 0.0102\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.006294\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.007370\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.007716\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.006732\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.006755\n",
+      "Epoch: 4/20. Train set: Average loss: 0.0069\n",
+      "Epoch: 4/20. Validation set: Average loss: 0.0077\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.002952\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.004102\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.003941\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.002966\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.002650\n",
+      "Epoch: 5/20. Train set: Average loss: 0.0033\n",
+      "Epoch: 5/20. Validation set: Average loss: 0.0058\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.002596\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.002356\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.002542\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.002681\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.002622\n",
+      "Epoch: 6/20. Train set: Average loss: 0.0025\n",
+      "Epoch: 6/20. Validation set: Average loss: 0.0055\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.001720\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.002137\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.001910\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.001885\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.001960\n",
+      "Epoch: 7/20. Train set: Average loss: 0.0020\n",
+      "Epoch: 7/20. Validation set: Average loss: 0.0051\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.000479\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.001565\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.001775\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.001841\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.001651\n",
+      "Epoch: 8/20. Train set: Average loss: 0.0016\n",
+      "Epoch: 8/20. Validation set: Average loss: 0.0055\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.005640\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.001188\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.001425\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.001883\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.001546\n",
+      "Epoch: 9/20. Train set: Average loss: 0.0015\n",
+      "Epoch: 9/20. Validation set: Average loss: 0.0053\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.001784\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.001093\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.001391\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.001384\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.001009\n",
+      "Epoch: 10/20. Train set: Average loss: 0.0013\n",
+      "Epoch: 10/20. Validation set: Average loss: 0.0054\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.001344\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.001332\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.001416\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.001104\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.001122\n",
+      "Epoch: 11/20. Train set: Average loss: 0.0013\n",
+      "Epoch: 11/20. Validation set: Average loss: 0.0051\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.000445\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.001069\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.000978\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.000712\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.001036\n",
+      "Epoch: 12/20. Train set: Average loss: 0.0010\n",
+      "Epoch: 12/20. Validation set: Average loss: 0.0054\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.000507\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.001066\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.000814\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.000806\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.000689\n",
+      "Epoch: 13/20. Train set: Average loss: 0.0008\n",
+      "Epoch: 13/20. Validation set: Average loss: 0.0053\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.000288\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.000960\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.000861\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.000778\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.001009\n",
+      "Epoch: 14/20. Train set: Average loss: 0.0009\n",
+      "Epoch: 14/20. Validation set: Average loss: 0.0052\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.000423\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.000764\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.000865\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.000573\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.000783\n",
+      "Epoch: 15/20. Train set: Average loss: 0.0007\n",
+      "Epoch: 15/20. Validation set: Average loss: 0.0052\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.001223\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.000763\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.000759\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.000538\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.000686\n",
+      "Epoch: 16/20. Train set: Average loss: 0.0007\n",
+      "Epoch: 16/20. Validation set: Average loss: 0.0052\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.003134\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.000798\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.000760\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.000647\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.000568\n",
+      "Epoch: 17/20. Train set: Average loss: 0.0007\n",
+      "Epoch: 17/20. Validation set: Average loss: 0.0052\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.000395\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.000574\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.000763\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.000631\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.000741\n",
+      "Epoch: 18/20. Train set: Average loss: 0.0007\n",
+      "Epoch: 18/20. Validation set: Average loss: 0.0051\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.000255\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.000703\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.000795\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.000570\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.001082\n",
+      "Epoch: 19/20. Train set: Average loss: 0.0008\n",
+      "Epoch: 19/20. Validation set: Average loss: 0.0052\n",
+      "Train: [0/60000 (0%)]\tLoss: 0.000509\n",
+      "Train: [12800/60000 (21%)]\tLoss: 0.000567\n",
+      "Train: [25600/60000 (43%)]\tLoss: 0.000741\n",
+      "Train: [38400/60000 (64%)]\tLoss: 0.000647\n",
+      "Train: [51200/60000 (85%)]\tLoss: 0.000584\n"
      ]
     }
    ],
